# l_dataClean

./: .gitignore  README.md
python_DS/: readmd.md
python_DS/DSFC/: asset_source.py  main.py  pyproject.toml
python_DS/DSFC/chp1/: intro.py
python_DS/DSFC/chp10/: Exploring_1d_data.md  Exploring_one_dimensional_data.py  Working_with_data.md  clean_mung.md  clean_mung.py  dataclasses.md  dataclasses_l.py  using_nameTuple.md  using_namedTuples.py
python_DS/DSFC/chp4/: vectors.md  vectors.py
python_DS/DSFC/chp6/: Bayes's_Theorem.md  Probability.md  condition_probability.py
python_DS/DSFC/chp6/scratch/: probability.py
python_DS/DSFC/chp9/: Getting_data.md  SomeFile.txt  clean_gov.py  egrep.py  most_common_words.py  the_bible.txt
python_DS/Note/: application_and_library.md
python_DS/Note/black/: setting_on_vscode.md
python_DS/Note/pdm/: install.md  manage_dependencies.md  manage_project.md  pyproject.toml.md  working_with_PEP_582.md  working_with_virtualenv.md
python_DS/Note/python/: module.md  package_and_module_import.md  site.md  sys.path_search_path.md  understand_yield.md
python_DS/Note/python/math/: round().md
python_DS/Note/setuptools/: quickstart.md
python_DS/Note/typing/: NameTuple.md
python_DS/Note/vscode_plot/: vscode_plot.md
python_DS/PDSA/: main.py  pyproject.toml
python_DS/PDSA/chp3/: generator.py  generator_iter.py
python_DS/PDSA/chp4/: basic_index_slice.py
python_DS/PDSA/chp5/: dataframe_t.py
python_DS/PDSA/chp6/: data_load_storage_file_format.py
python_DS/PDSA/common/: print_variance.py
(+3 files in other folders)
