[project]
name = ""
version = ""
description = ""
authors = [
    {name = "zixsa", email = "dbdf0147@gmail.com"},
]
dependencies = [
    "click>=8.1.3",
    "numpy>=1.23.5",
    "pandas>=1.5.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
start = "python main.py"